corrigindo erros no código

--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,6 +1,6 @@
 ion-app._gmaps_cdv_ .nav-decor{
     background-color: transparent !important; 
-
+}
 page-home {
 
     #floating-panel {
@@ -15,7 +15,7 @@ page-home {
         font-family: 'Roboto','sans-serif';
         line-height: 30px;
         padding-left: 10px;
-
+    }
 
 
     .scr roll {
@@ -26,5 +26,4 @@ page-home {
         height: 100%;
 
     }
-
 }
